release try